# Tests Makefile.am

AM_CPPFLAGS = -I$(top_srcdir)

LDADD = $(top_builddir)/src/libbeetle.a

check_PROGRAMS = aritmtit brancht comparet createt doloopt initialt libt literalt \
	logict memoryt stackt stept runt loadobjt saveobjt exceptst linkt

TESTS = $(check_PROGRAMS)

#	echo "Reverse this text" | ./libt
